--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ngrx/effects": "^16.3.0",
     "@ngrx/store": "^16.3.0",
     "@ngrx/store-devtools": "^16.3.0",
+    "angular-calendar": "^0.31.0",
     "bootstrap": "^5.3.2",
+    "date-fns": "^2.29.3",
     "ng-mocks": "^14.11.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
